[project]
name = "cryptolab"
version = "0.0.0"
description = "collection of various python tools to experiment with cryptology"
requires-python = ">= 3.12"
authors = [
    {name = "Matt Riley", email = "mcriley821@gmail.com"}
]
maintainers = [
    {name = "Matt Riley", email = "mcriley821@gmail.com"}
]
readme = "README.md"
license = "MIT"
dependencies = []

[tool.pyright]
input = [
  "cryptolab/**/*"
]
strict = [
  "cryptolab/**/*"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
